java-sdk: drop commons-lang3 from the vendored SDK
Three usages remain, all trivially expressed with the JDK: case-insensitive
comparisons in TelemetryInitializer, blank/join helpers in DaggerExceptionUtils
(kept null-tolerant, as lang3 join was), and TypeUtils.parameterize in
QueryBuilder replaced by a plain ParameterizedType for List<T>. The codegen
maven plugin keeps its own commons-lang3 dependency; it is not part of the
module classpath.

Signed-off-by: Yves Brissaud <yves@dagger.io>